--- a/src/Style/Login.css
+++ b/src/Style/Login.css
@@ -20,7 +20,7 @@ body{
     z-index: -2;
     width: 100%;
     height: 100%;
-    background-color: rgb(226, 223, 223);
+    background-color: #F2F2F2;
     display: absolute;
     position: fixed;
 }
@@ -29,7 +29,7 @@ body{
     z-index: -1;
     width: 41%;
     height: 100%;
-    background-color: aquamarine;
+    background-color: #7BE0D1;
     display: absolute;
     position: fixed;
 }
@@ -47,22 +47,24 @@ body{
         align-items: center;
         width: 60%;
         height: 50vh;
-        box-shadow: 1px 1px 14px 3px rgba(0,0,0,0.75);
+        box-shadow: 0px 0px 30px 5px rgba(0, 0, 0, 0.25);
         border-radius: 4px;
 
         .split-left{
             width: 35%;
             height: 100%;
-            background-color: aquamarine;
+            background-color: #7BE0D1;
             border-radius: 4px; 
         }
     
         .split-right{
             display: flex;
+            justify-content: center;
             flex-direction: column;
             align-items: center;
             width: 65%;
             height: 100%;
+            background-color: #8BD1F6;
 
             .form-header{
                 display: flex;
@@ -73,15 +75,14 @@ body{
                 margin-bottom: 20px;
             }
         
-            #register_form{
+            #register_form, #login_form{
                 display: flex;
                 flex-direction: column  ;
                 justify-content: center;
                 align-items: center;
                 width: 100%;
-                height: 100%;
-
             }
+            
         }
         .form-footer{
             display: flex;
@@ -96,9 +97,38 @@ body{
 }
 
 input{
+    border: none;
+    border-bottom: 1px solid black;
+    background: none;
+    outline: none;
+    font-size: 16px;
     margin: 8px;
     padding: 8px;
     width: 40%;
     height: 2vh;
+}
+
+a{
+    color: black;
+    text-decoration: none;
+}
+
+button{
+    width: 30%;
+    background: #D9DCF2;
+    border: none;
+    height: 3vh;
+    border-radius: 4px;
+    box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.25);
+    font-size: 18px;
+    font-weight: 900;
+    margin: 20px;
+    cursor: pointer;
+    transition: all ease-in-out .25s;
+}
+
+button:hover{
+    background-color: #c1c5dd;
+    box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.25);
 }
 
