--- a/src/Style/Add-task.css
+++ b/src/Style/Add-task.css
@@ -21,10 +21,10 @@ body {
     border-radius: 3px;
     font-size: 14px;
   }
-  
+/*   VINS LOGIN PAGE MAN SAPISH STILU XD JO TEV IR NORADITS GLOBALI UZ VISAM POGAM i guess..
   button {
     padding: 8px 16px;
-    background-color: #007bff;
+    background-color: #007bff;  
     color: black;
     border: none;
     border-radius: 3px;
@@ -34,4 +34,4 @@ body {
   
   button:hover {
     background-color: #D9DCF2;
-  }
+  } */
