--- a/src/Style/Login.css
+++ b/src/Style/Login.css
@@ -81,6 +81,8 @@ body{
                 justify-content: center;
                 align-items: center;
                 width: 100%;
+
+                
             }
             
         }
@@ -95,6 +97,29 @@ body{
         }
     }
 }
+#sign_in_button, 
+#sign_up_button
+{
+    width: 30%;
+    background: #D9DCF2;
+    border: none;
+    height: 3vh;
+    border-radius: 4px;
+    box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.25);
+    font-size: 18px;
+    font-weight: 900;
+    margin: 20px;
+    cursor: pointer;
+    transition: all ease-in-out .25s;
+}
+
+#sign_in_button:hover, 
+#sign_up_button:hover
+{
+    background-color: #c1c5dd;
+    box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.25);
+}
+
 
 input{
     border: none;
@@ -113,22 +138,5 @@ a{
     text-decoration: none;
 }
 
-button{
-    width: 30%;
-    background: #D9DCF2;
-    border: none;
-    height: 3vh;
-    border-radius: 4px;
-    box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.25);
-    font-size: 18px;
-    font-weight: 900;
-    margin: 20px;
-    cursor: pointer;
-    transition: all ease-in-out .25s;
-}
 
-button:hover{
-    background-color: #c1c5dd;
-    box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.25);
-}
 
