--- a/src/Style/Login.css
+++ b/src/Style/Login.css
@@ -138,5 +138,31 @@ a{
     text-decoration: none;
 }
 
+.input{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.input-error{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+
+    .error-message{
+        max-width: 40%;
+        font-size: 12px;
+        color: red;
+    }
+
+    #username{
+        border-bottom: 1px solid red;
+    }
+}
+
 
 
