--- a/src/style/Main.css
+++ b/src/style/Main.css
@@ -30,13 +30,36 @@ body {
 .content {
    padding: 70px;
 }
-/* ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #8BD1F6;
-    position: fixed;
-    top: 0; right: 0; bottom: 0;                            
+
+.mainContainer {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 50px;
+    flex-direction: column;
+    padding: 15px;
+   
+
+}
+
+.square {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #D9D9D9;
+    width: 80px;
+    height: 80px;
+    margin: 10px;
+    border-radius: 10px;
+    cursor: pointer;
+
+}
+
+.text {
+    position: absolute;
+    top: -3px;
     width: 100%;
-} */
+    text-align: center;
+    
+}
+
