--- a/src/Style/Add-task.css
+++ b/src/Style/Add-task.css
@@ -22,7 +22,7 @@ body {
     font-size: 14px;
   }
   
-  button {
+  .poga {
     padding: 8px 16px;
     background-color: #007bff;
     color: black;
@@ -32,6 +32,6 @@ body {
     font-size: 14px;
   }
   
-  button:hover {
+  .poga:hover {
     background-color: #D9DCF2;
   }
