--- a/src/style/Main.css
+++ b/src/style/Main.css
@@ -7,12 +7,21 @@ body {
     background-color:  #E0F5F2;
 }
 .navbar {
+    display: flex;  
+    align-items: center;
     overflow: hidden;
     background-color: #8BD1F6;
     float: left;
     position: fixed;
     top: 0;
     width: 100%;
+    height: 5vh;
+
+    h1{
+        text-align: center;
+        margin: 0;
+        margin-left: 30px;
+    }
    
 }
 .navbar a {
